CH-1100 by Zarabadoo: Fix misalignment of count

--- a/css/acquia_lift.navbar.css
+++ b/css/acquia_lift.navbar.css
@@ -207,7 +207,7 @@
 #navbar-administration .navbar-tray-horizontal .acquia-lift-option-sets-list span {
   line-height: 1.2;
 }
-#navbar-administration .navbar-tray-horizontal .acquia-lift-option-sets-list .acquia-lift-personalize-type-count {
+#navbar-administration .navbar-tray-horizontal .acquia-lift-option-sets-list .acquia-lift-personalize-type-count:not(.acquia-lift-empty) {
   position: relative;
   top: -.2em;
 }
